vault changes. path fixes
